# object_detection

./: .env.example  .gitignore  README.md  pyproject.toml
YOLOv8/yolov8n/: args.yaml
configs/: README.md  bolt.yaml  cvat.yaml  example.yaml  my.yaml  nut.yaml  nut_detr.yaml  poker_yolos.yaml  rust.yaml  rust_detr.yaml  rusty.yaml  rusty_detr.yaml  rusty_ret.yaml  rusty_yolos.yaml  rustyv12.yaml  rustyv3.yaml
notebooks/: train_rt_detr_on_custom_dataset_with_transformers_yolos.ipynb  transformer_fine_tune.py
od/: __init__.py  cli.py
od/data/: __init__.py  cvat.py  roboflow.py
od/models/: __init__.py  torchvision_backend.py  transformers_backend.py  ultralytics_backend.py
od/trainers/: __init__.py  trainer.py
od/utils/: config.py
